# new_ws

./: .gitignore  ARCHITECTURE.md
src/aruco/: package.xml  setup.py
src/aruco/aruco/: aruco_detector_node.py  aruco_node.py  mission_override.py
src/battery/: package.xml
src/battery/battery/: battery_node.py
src/bluesign/: package.xml  setup.cfg  setup.py
src/bluesign/bluesign/: bluesign_node.py
src/camera/camera/: camera_node.py
src/control/: package.xml
src/control/control/: control_node.py
src/control/launch/: auto_driving.launch.py  racer_bringup.launch.py
src/interface/: CMakeLists.txt  package.xml
src/interface/msg/: Detection.msg  DetectionArray.msg  RampDetection.msg
src/interpret/interpret/: interpret_node.py
src/lane_detection/lane_detection/: lane_node.py
src/monitor/: package.xml
src/monitor/monitor/: flask_app_factory.py  monitor_node.py  monitor_state.py
src/monitor/monitor/static/css/: style.css
src/monitor/monitor/static/js/: app.js
src/monitor/monitor/templates/: index.html
src/opencv/: package.xml
src/opencv/opencv/: opencv_node.py
src/ramp_detection/: package.xml  setup.cfg  setup.py
src/ramp_detection/ramp_detection/: ramp_node.py
src/sign/: package.xml  setup.cfg  setup.py
src/sign/sign/: sign_detector_node.py
src/sim_bridge/: package.xml  setup.py
src/sim_bridge/launch/: sim_pipeline.launch.py
src/sim_bridge/sim_bridge/: cmd_bridge.py  debug_viewer.py  image_bridge.py
src/yolo/: package.xml  setup.py
src/yolo/models/: README.md  labels.txt
src/yolo/yolo/: yolo_infer.py  yolo_node.py
