<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aruco</name>
  <version>0.0.0</version>
  <description>ArUco marker detection node: camera image -> detected marker id + stop signal + debug overlay.</description>
  <maintainer email="sooyong.park@telechips.com">topst</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <!-- cv2.aruco 는 opencv 에 포함(이 보드 cv2 4.5.4 구 API). cv_bridge 는 쓰지 않음
       (new_ws 관례대로 np.frombuffer + cv2.imdecode 로 압축영상 디코드). -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
