<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ramp_detection</name>
  <version>0.0.0</version>
  <description>Yellow ramp perception: yellow mask -> ramp-centre offset + look-ahead cues (RampDetection).</description>
  <maintainer email="sooyong.park@telechips.com">topst</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>interface</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
