<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo</name>
  <version>0.0.0</version>
  <description>YOLO object detection node (onnxruntime CPU): camera image -> DetectionArray + debug overlay.</description>
  <maintainer email="sooyong.park@telechips.com">topst</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>interface</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <!-- onnxruntime 는 rosdep 키가 없어 pip 로 설치한다(플랫폼 제약: aarch64/cp310):
       pip install onnxruntime==1.18.1   (models/README.md 참고) -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
